Bug 160176 - Forms: Help text of a control will be shown also on other controls, where no help text is defined (kf5)
Summary: Forms: Help text of a control will be shown also on other controls, where no ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.3.4.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:24.8.0 target:24.2.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks: KDE, KF5 Form-Controls Tooltip
  Show dependency treegraph
 
Reported: 2024-03-13 08:06 UTC by Robert Großkopf
Modified: 2024-04-19 14:23 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Open the document. Move the cursor slowly over controls from one control to the other … (56.03 KB, application/vnd.oasis.opendocument.text)
2024-03-13 08:06 UTC, Robert Großkopf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2024-03-13 08:06:24 UTC
Created attachment 193089 [details]
Open the document. Move the cursor slowly over controls from one control to the other …

Open the attached Writer document.
There are 2 label controls and 2 text boxes. 
In properties of first text box is set "Help text" → 'Some help text for the first text control'.
You could see this help text when moving cursor over the first text box. 
Now move the cursor (slowly) to the second text box.
Help of first text box will appear when cursor is over second textbox.
Move on to the second label control.
Help text of first text box will appear over second label control.

This kind of help is unusable. In complete forms with more controls will be some more controls with "Help text". A control without "Help text" will show different help from other controls - depending on the moving with the cursor over the form.

Have seen this bug in LO 7.4.7.2, also appears in
Version: 24.2.1.2 (X86_64) / LibreOffice Community
Build ID: db4def46b0453cc22e2d0305797cf981b68ef5ac
CPU threads: 6; OS: Linux 5.14; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (de_DE.UTF-8); UI: en-US
Calc: threaded

Might be it never worked well.
Comment 1 Robert Großkopf 2024-03-13 08:09:56 UTC
Tested a little bit more.
Help will be shown right in LO 7.2.5.1, won't be shown right in LO 7.3.6.2 on OpenSUSE 15.4 64bit rpm Linux with KDE.
So this is a regression.
Comment 2 Stéphane Guillou (stragu) 2024-03-28 13:38:55 UTC
Can't reproduce with:

Version: 7.3.0.3 / LibreOffice Community
Build ID: 0f246aa12d0eee4a0f7adcefbf7c878fc2238db3
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: kf5 (cairo+xcb)
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Reproduced in:

Version: 24.2.2.1 (X86_64) / LibreOffice Community
Build ID: bf759d854b5ab45b6ef0bfd22e51c6dc4fb8b882
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: kf5 (cairo+xcb)
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

The tooltip follows the cursor when moving onto the second form control.

No repro with gtk3 VCL plugin.

Bibisected with linux-64-7.3 repo to first bad build [060583ad9168597e9d09277d508cd79dc3812f9e] which points to 7fc871299080427587307932c505d3ae93d6a357 which is a cherrypick of:

commit af6dd54d53eee0d0de1164bff0a77c6b433b3935
author	Jan-Marek Glogowski <glogow@fbihome.de>	Tue Apr 12 00:29:56 2022 +0200
committer	Jan-Marek Glogowski <glogow@fbihome.de>	Tue Apr 12 14:09:00 2022 +0200
tdf#148115 Qt handle tooltips via event loop
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/132841

Jan-Marek does not seem active anymore.
Michael, maybe you have an idea?
Comment 3 Rafael Lima 2024-03-28 14:26:22 UTC
The weird part is that when you switch from the first text box straight to the second one, ImplShowHelpWindow (from vcl/source/app/help.cxx) is called with the same rHelpText.

I noticed the same behavior even on gtk3, but in gtk3 the second tooltip is not shown.
Comment 4 Michael Weghorn 2024-03-28 20:21:52 UTC
(In reply to Rafael Lima from comment #3)
> The weird part is that when you switch from the first text box straight to
> the second one, ImplShowHelpWindow (from vcl/source/app/help.cxx) is called
> with the same rHelpText.
> 
> I noticed the same behavior even on gtk3, but in gtk3 the second tooltip is
> not shown.

That sounds like the root cause is somewhere outside of the Qt-specific code then, and I can indeed also reproduce with the gen VCL plugin.

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 6931a596350086d52ba32bf8a84cb36fbfdb34d6
CPU threads: 12; OS: Linux 6.6; UI render: default; VCL: x11
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded
Comment 5 Michael Weghorn 2024-04-11 10:50:03 UTC
Pending fix:
https://gerrit.libreoffice.org/c/core/+/166006
Comment 6 Commit Notification 2024-04-11 21:55:09 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bf4ec3b2beb8121614b8a4098061f49f851b30f8

related tdf#160176 qt: Create dummy Qt widget in main thread

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2024-04-11 21:55:11 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6347c89711903834cc9188abda5d5a253053b789

tdf#160176 svx: Reset help text when form control has none

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Michael Weghorn 2024-04-11 21:55:42 UTC
Fixed in master, backport for 24-2 pending in Gerrit:
https://gerrit.libreoffice.org/c/core/+/165933
Comment 9 Commit Notification 2024-04-12 06:08:58 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/d1c29054449b00a16da6ee7ecaef0a94fe3964bf

tdf#160176 svx: Reset help text when form control has none

It will be available in 24.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Stéphane Guillou (stragu) 2024-04-19 14:23:33 UTC
Verified in:

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: bdf3b5ce49b0e4ee1b4525d344cfb037ef473059
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: kf5 (cairo+xcb)
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded

Thank you Michael!